<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="25dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonCS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_cs"
            android:checked="true"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonSIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_sis"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_bi"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_ds"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_button_label" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/selectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_button_label" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>