<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/submit_button_label"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.987" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:paddingRight="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewProfileNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/name_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewProfileEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/email_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewIdNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/id_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/id_hint"
                android:inputType="number"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewProfileDeptLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/dept_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/selectDeptButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_button_label"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>