<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="25dp"
        android:paddingRight="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewProfileNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/name_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewProfileEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/email_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewIdNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/id_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewProfileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/textViewProfileDeptLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/dept_label"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewProfileDept"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#4C4C4C"
                android:textSize="18sp"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>